--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Learn-Korean-Well</title>
   </head>
   <body>
-    <div id="root" class="min-vh-100"></div>
+    <div id="root" class="h-100"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
